<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">News App</string>
    <string name="noAuthor">...</string>
    <string name="emptyList">No Data. Try another topic.</string>
    <string name="no_internet_connection">No Internet Connection</string>


    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Article Settings</string>

    <string name="settings_pagenum_label">Change Page</string>
    <string name="settings_pagenum_key" translatable="false">page</string>
    <string name="settings_pagenum" translatable="false">@string/settings_pagenum1_value</string>

    <!-- Label for order-by relevance option [CHAR LIMIT=2] -->
    <string name="settings_pagenum1_lbl">Page 1</string>
    <string name="settings_pagenum1_value" translatable="false">1</string>
    <!-- Label for order-by relevance option [CHAR LIMIT=2] -->
    <string name="settings_pagenum2_lbl">Page 2</string>
    <string name="settings_pagenum2_value" translatable="false">3</string>
    <!-- Label for order-by relevance option [CHAR LIMIT=2] -->
    <string name="settings_pagenum3_lbl">Page 3</string>
    <string name="settings_pagenum3_value" translatable="false">3</string>
    <!-- Label for order-by relevance option [CHAR LIMIT=2] -->
    <string name="settings_pagenum4_lbl">Page 4</string>
    <string name="settings_pagenum4_value" translatable="false">4</string>
    <!-- Label for order-by relevance option [CHAR LIMIT=2] -->
    <string name="settings_pagenum5_lbl">Page 5</string>
    <string name="settings_pagenum5_value" translatable="false">5</string>
    <!-- Label for order-by relevance option [CHAR LIMIT=2] -->
    <string name="settings_pagenum6_lbl">Page 6</string>
    <string name="settings_pagenum6_value" translatable="false">6</string>
    <!-- Label for order-by relevance option [CHAR LIMIT=2] -->
    <string name="settings_pagenum7_lbl">Page 7</string>
    <string name="settings_pagenum7_value" translatable="false">7</string>
    <!-- Label for order-by relevance option [CHAR LIMIT=2] -->
    <string name="settings_pagenum8_lbl">Page 8</string>
    <string name="settings_pagenum8_value" translatable="false">8</string>
    <!-- Label for order-by relevance option [CHAR LIMIT=2] -->
    <string name="settings_pagenum9_lbl">Page 9</string>
    <string name="settings_pagenum9_value" translatable="false">9</string>
    <!-- Label for order-by relevance option [CHAR LIMIT=2] -->
    <string name="settings_pagenum10_lbl">Page 10</string>
    <string name="settings_pagenum10_value" translatable="false">10</string>


    <string name="settings_keyword_label">Topic</string>
    <string name="settings_keyword_key" translatable="false">keyword</string>
    <string name="settings_keyword" translatable="false">Travel</string>


    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_article_value</string>

    <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
    <string name="settings_order_by_article_label">Relevance</string>
    <string name="settings_order_by_article_value" translatable="false">relevance</string>

    <!-- Label for order-by newest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Newest</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>
</resources>
