<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    <ListPreference
        android:defaultValue="@string/settings_pagenum"
        android:entries="@array/settings_pagenum_labels"
        android:entryValues="@array/settings_pagenum_values"
        android:key="@string/settings_pagenum_key"
        android:title="@string/settings_pagenum_label" />
    <EditTextPreference
        android:defaultValue="@string/settings_keyword"
        android:inputType="textCapWords"
        android:key="@string/settings_keyword_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_keyword_label" />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label"/>
</PreferenceScreen>
